# ChangeLog for x11-themes/pekwm-themes-hewphoria
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/pekwm-themes-hewphoria/ChangeLog,v 1.6 2010/06/11 21:50:14 yngwin Exp $

  11 Jun 2010; Ben de Groot <yngwin@gentoo.org> metadata.xml:
  Removing myself as proxy

  14 Oct 2008; Ben de Groot <yngwin@gentoo.org>
  pekwm-themes-hewphoria-20080404.ebuild,
  pekwm-themes-hewphoria-20080921.ebuild:
  Change src_uri to new location

*pekwm-themes-hewphoria-20080921 (22 Sep 2008)

  22 Sep 2008; Ben de Groot <yngwin@gentoo.org> metadata.xml,
  +pekwm-themes-hewphoria-20080921.ebuild:
  Version bump. Fix metadata indentation.

  22 Aug 2008; Ben de Groot <yngwin@gentoo.org> metadata.xml:
  Updated maintainer email

  08 Apr 2008; Ben de Groot <yngwin@gentoo.org> ChangeLog:
  Fix typo.

*pekwm-themes-hewphoria-20080404 (08 Apr 2008)

  08 Apr 2008; Ben de Groot <yngwin@gentoo.org> +metadata.xml,
  +pekwm-themes-hewphoria-20080404.ebuild:
  Initial commit. Ebuild contributed by Nico Wohlgemuth, maintainer by proxy.
