@@ -1,6 +1,16 @@
-DIST pekwm-themes-hewphoria-20080404.tar.bz2 770628 RMD160 15e410e0760856451166db51f992c03ec292e234 SHA1 fbfa5ffedaf1f131ce5bf6a7732579847ca3726e SHA256 848809e62e7cae53d97653bc86e71e0774ca576cbabfc4961ccdfa0e58b262a4
-DIST pekwm-themes-hewphoria-20080921.tar.bz2 1014625 RMD160 498a382667c8196fd611b77fe47514e6d84cd39d SHA1 a86beee93890e17825eca2c3decd8f727f4afe21 SHA256 0baff2ca6edb70e5f3a0be3309be89ea98de49514dd7aebea5df4fd13b256d4f
-EBUILD pekwm-themes-hewphoria-20080404.ebuild 773 RMD160 f13d4c7de0f5bec9286e915cff9fc5afa91a4af0 SHA1 9c5d0c7f5be40b303a6d8101cda4cda34173935c SHA256 fd7fac6e8ab9cc79bad8783978d504fbe13ae60060f3782263d48a1df77bf20e
-EBUILD pekwm-themes-hewphoria-20080921.ebuild 773 RMD160 de06bd96e9fd6a7f1617205a6c4e86fc6ce6679d SHA1 9d224ad268ea647bce81e3f8d91f9d6a20c75c9a SHA256 57eb1780a1302e45c0942377973f4df7ad5f61300582b17ed15cd67600e6174d
-MISC ChangeLog 1086 RMD160 c207ce7effe648cf77ba29526a90ea6129769640 SHA1 cd68a176214a16b0818b5252c14a487c232af793 SHA256 6c46e5d53d36f58fd52454b290072cc617cbe943c2364e2ae7dc769134784a05
-MISC metadata.xml 273 RMD160 0bb2bc0447122b68d83b85500c354a31a9457f25 SHA1 d42a14f946297bba8c207922f8ddd494386059c2 SHA256 ae90f73c922abc6bf47926a1d65e2c94b3a73c32313cd60e23a8765dbb67005a
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST pekwm-themes-hewphoria-20080404.tar.bz2 770628 SHA256 848809e62e7cae53d97653bc86e71e0774ca576cbabfc4961ccdfa0e58b262a4 SHA512 c1f5bee61157ba174eac4f605bf356f983b8fdc3456ef0b7c8ab9b14fe34aad0073f7c400f28dfd20fad255f01bdba487f94ab06abdc05b39e55a5d20d911107 WHIRLPOOL 15b0852a5841f3e80de53083a50836687f709692ce3e96ba8e0afddbfa6f87f125e34aefbe0b2d5d9c8d2bcf8cc8676c2f54d80fe20e9f743593340887906c6e
+DIST pekwm-themes-hewphoria-20080921.tar.bz2 1014625 SHA256 0baff2ca6edb70e5f3a0be3309be89ea98de49514dd7aebea5df4fd13b256d4f SHA512 aec0d2b1c6ffd3b0b0d5905c5dae3920b8104707c9c1d1c68f94c7c3271a9f72e8bd3011232a7581b5216faeeb87a33129c93bf241909fa2276e007091d17012 WHIRLPOOL b41b22856bb2f5c97e08c91a178eb8f97c8157e9c3d650f22c1923d85956c5e75318bfd7d74495257cbc2893ca2cd884cfe8f18e981be47e7463f8239fe34568
+EBUILD pekwm-themes-hewphoria-20080404.ebuild 800 SHA256 daa76a91d3b1cf3fa72135cb3795ed42a4acd25b33e636ee400b9159175cd640 SHA512 e34ac60d3a5a0f77d29069301a6d49bc0ae97dcfa356a8a8f2ab9d775e3716596b9357ad220b803a035486a67f1d4396c80ada0fe3757725a02f5e648fd426b1 WHIRLPOOL 7b3466db6bd7831371b330dfa7eab3654e42278af0171762c2950337dd54c78c1e4ab359710b0f63af074ec9d0e330118734a6bcd94edba0cf2b9a7b6d5aadec
+EBUILD pekwm-themes-hewphoria-20080921.ebuild 800 SHA256 901d76b6655f5df83a3c1af1eb956691930174f483c503f034e3f61afe42046e SHA512 f57b95189006f67aed2557ef5ce8356166c8fc2f1d3f1b322f11a26746a18fe66f7d22b59070455680f147309998333d17e1a5b9b9d1cd476cd2f0fb2378cba8 WHIRLPOOL 1695ce5a8e53e4ea1436f5795d026214558a145e7036d625b95be923cab87d582538bbeeba94bf885edb29f34e58e28d515956d99758dc593c79faa705e7670f
+MISC ChangeLog 1272 SHA256 905b9888587fb4230e149e4d58e88362374810baa152968d7077c847f84ffd57 SHA512 f880e6ae60f7c9c339af6890e15ee3848ead3c33c925e2f272d7b38a549ea8200400f96f1b01f7abd44850bfbbe7eaa3ebc5899d8d52e3304d93d5f3d7d5ccea WHIRLPOOL c27d79cc6442f67529e55553be1b86e95609e19519d72f95a4949fc07950b8b0ab076d16442576862eedc6680c380455814a3d6c71c0cc4c95c3110d64e0291e
+MISC metadata.xml 273 SHA256 ae90f73c922abc6bf47926a1d65e2c94b3a73c32313cd60e23a8765dbb67005a SHA512 9079e8bc4d7c5ebbf98a58b0df9fe9720a77d768ce2978bfe759ddc7f630b91fdf23ac7af1f1df3079aea7da5945482ce899cbf4043c421ccfc9469b6e2fa505 WHIRLPOOL fb65e22e75ea93ed1e9ab1ff8ce7c4988a8b5f96c14918b6611bc96f0f8f16ad20eab2dbc7c87eba488a42bf75fc7d5f9766cc146b94d207c4802d3a741d6dce
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlBt96oACgkQ2ugaI38ACPBsDgD/XK0UoPoE62xgUMIsf/+9Wxh0
+gNLP4e3k6dkewk+WN9MA/29q6z1IJ+XCzeyE3AWohPJ77hmtn5EFXg205iFFm/La
+=Lw82
+-----END PGP SIGNATURE-----
